apply plugin: 'java'
apply plugin: 'maven-publish'

sourceCompatibility = 1.8
version = '0.9'
group = 'de.schummar'

repositories { mavenCentral() }
dependencies { compile 'org.slf4j:slf4j-api:1.7.6' }


task sourcesJar(type: Jar, dependsOn: classes) {
	classifier = 'sources'
	from sourceSets.main.allSource
}

task javadocJar(type: Jar, dependsOn: javadoc) {
	classifier = 'javadoc'
	from javadoc.destinationDir
}

artifacts {
	archives sourcesJar
	archives javadocJar
}

publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}
	repositories {
		maven {
			url "$buildDir/repo" // change to point to your repo, e.g. http://my.org/repo
		}
	}
}
